Fix align

--- a/packages/vscode-extension/src/webview/components/Preview.css
+++ b/packages/vscode-extension/src/webview/components/Preview.css
@@ -21,7 +21,7 @@
   max-width: 100%;
   max-height: 100%;
   min-height: 350px;
-  align-self: start;
+  align-self: center;
   /* object-fit: scale-down; */
 }
 
